# plinko_sim

./: CMakeLists.txt  README.md
src/: main.cpp
